# RenderLamp

./: .clang-format  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  CODE_STYLE.md  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
RenderLamp/: RenderLamp.sln
RenderLamp/RenderLamp/: FileManager.cpp  FileManager.h  RenderLamp.cpp  RenderLamp.vcxproj  RenderLamp.vcxproj.filters  RenderLampManager.cpp  RenderLampManager.h
RenderLamp/RenderLampBuzz/: RenderLampBuzz.cpp  RenderLampBuzz.vcxproj  RenderLampBuzz.vcxproj.filters  buzz_renderer.cpp  buzz_renderer.h  render_lamp_main.cpp
RenderLamp/RenderLampEditor/: RenderLampEditor.vcxproj  RenderLampEditor.vcxproj.filters  main.cpp  main_window.cpp  output.tga  raygui.h
_codeql_build_dir/: CPackConfig.cmake  CPackSourceConfig.cmake
application/: CMakeLists.txt
application/editor/include/components/: SphereRenderComponent.hpp
application/editor/include/systems/scene/: SceneAPI.hpp
application/editor/include/systems/scene/models/: Component.hpp
application/editor/src/: Window.cpp
application/include/: ServerInstance.hpp
application/include/app/: CliInterface.hpp  CliUtils.hpp  PrinterSystem.hpp
application/include/interfaces/: IObserver.hpp  ISubject.hpp
application/include/kernels/: PathTracerKernel.hpp  PathTracerKernels.hpp  RayGenKernel.hpp  RayIntersectionKernel.hpp  ShadingKernel.hpp
application/include/loaders/: ModelLoader.hpp
application/include/scene/: Scene.hpp
application/include/scene/geometries/: Mesh.hpp  Sphere.hpp
application/include/scene/lights/: Light.hpp  PointLight.hpp
application/include/scene/material/: Material.hpp
application/include/scene/primitives/: Geometry.hpp  Mesh.hpp  Sphere.hpp  Triangle.hpp
application/include/scene/utils/: Camera.hpp
application/include/server/: Server.hpp  ServerInstance.hpp  ServerRequest.hpp
application/include/session/: Session.hpp  SessionUtils.hpp
application/include/shaders/: DiffuseShader.hpp  Shader.hpp  ShaderType.hpp
application/include/shaders/interfaces/: Shader.hpp
application/include/utils/: Camera.hpp  Color.hpp  HitRecord.hpp  Interval.hpp  Material.hpp  ModelLoader.hpp  PointLight.hpp  Random.hpp
application/src/: Main.cpp  ServerInstance.cpp
application/src/app/: CliInterface.cpp  PrinterSystem.cpp
application/src/scene/: Scene.cpp
application/src/server/: Server.cpp  ServerInstance.cpp
application/src/session/: Session.cpp
applications/BuzzRenderer/: CMakeLists.txt
applications/BuzzRenderer/include/: Color.hpp  Ray.hpp  RenderingServer.hpp
applications/BuzzRenderer/include/interface/: Printer.hpp  UserInterface.hpp
applications/BuzzRenderer/src/: Main.cpp  RenderingServer.cpp
applications/BuzzRenderer/src/interface/: Printer.cpp  UserInterface.cpp
applications/Zone/: CMakeLists.txt
applications/game/: CMakeLists.txt
core/Arca/: CMakeLists.txt
core/Arca/include/: Arca.hpp  ArcaAsset.hpp  ArcaIO.hpp  ArcaInstance.hpp
core/Arca/src/: ArcaContainer.cpp  ArcaInstance.cpp
core/BuzzRenderer/: CMakeLists.txt
core/BuzzRenderer/include/: BuzzRenderer.hpp  RenderLamp.hpp
docs/: Welcome.md
editor/: CMakeLists.txt  main.cpp  project.godot
editor/include/: Application.h  Application.hpp  Arca.hpp  ArcaConfig.hpp  ArcaFileHandler.hpp  ArcaIO.hpp  BuildSystem.hpp  CameraSystem.h  CameraSystem.hpp  Componenet.hpp  Component.h  Component.hpp  Entitiy.hpp  Entity.h  Entity.hpp  Marathon.hpp  RendererRayLib.h  RendererRayLib.hpp  RenderingSystem.hpp  Scene.h  Scene.hpp  SceneManager.h  SceneManager.hpp  SphereMeshComponent.hpp  Transform3D.h  Transform3D.hpp  Window.h  Window.hpp
editor/include/components/: SphereMeshComponent.hpp  SphereRenderComponent.hpp  Transform3D.hpp
editor/include/ecs/: Component.hpp  Entity.hpp  Scene.hpp
editor/include/gui/: GuiLayer.hpp
editor/include/systems/: BuildSystem.hpp  ProjectManagerSystem.hpp  RealTimeRenderingSystem.hpp  RenderingSystem.hpp  SceneManagerSystem.hpp
editor/include/systems/batcher/: RenderSettings.hpp
editor/include/systems/builders/: SceneBuilder.hpp
editor/include/systems/project/: Project.hpp  ProjectManagerSystem.hpp
editor/include/systems/scene/: Scene.hpp  SceneManagerSystem.hpp
editor/include/systems/scene/models/: Scene.hpp
editor/src/: Application.cpp  Arca.cpp  ArcaConfig.cpp  BuildSystem.cpp  CameraSystem.cpp  Component.cpp  Entity.cpp  Marathon.cpp  RendererRayLib.cpp  RenderingSystem.cpp  Scene.cpp  SphereMeshComponent.cpp  Transform3D.cpp  Window.cpp  main.cpp
editor/src/components/: SphereMeshComponent.cpp  SphereRenderComponent.cpp
editor/src/ecs/: Component.cpp  Entity.cpp  Scene.cpp
editor/src/systems/: BuildSystem.cpp  ComponenetSystem.cpp  ProjectManagerSystem.cpp  RealTimeRenderingSystem.cpp  RenderingSystem.cpp  SceneManagerSystem.cpp
editor/src/systems/builders/: SceneBuilder.cpp
editor/src/systems/project/: Project.cpp  ProjectManagerSystem.cpp
editor/src/systems/scene/: Scene.cpp  SceneManagerSystem.cpp
editor/tests/: first_test.cpp
include/: Application.h  CameraSystem.h  Component.h  Entity.h  RendererRayLib.h  Scene.h  Transform.h  Transform3D.h  Window.h  WindowComponent.h
renderer/: CMakeLists.txt
renderer/include/: BuzzRenderer.hpp  Color.hpp  ImageHandler.hpp  RenderConfig.hpp  RenderConfigEnums.hpp  RenderLampAPI.hpp  RendererInterface.hpp  math.hpp  ray.hpp  renderer.h  renderer.hpp
renderer/include/interface/: Printer.hpp  UserInterface.hpp
renderer/renderer/: renderer.h
renderer/src/: Main.cpp  RenderLampAPI.cpp  rendderer.cpp  renderer.cpp
renderer/src/interface/: UserInterface.cpp
src/: Application.cpp  CameraSystem.cpp  Entity.cpp  RendererRayLib.cpp  Scene.cpp  Transform.cpp  Transform3D.cpp  Window.cpp  WindowComponent.cpp  main.cpp
test/: CMakeLists.txt
tests/: CMakeLists.txt  TransformTest.cpp  first_test.cpp
tests/Arca/: CMakeLists.txt  test_arca.cpp
tests/core/: CMakeLists.txt  TestArca.cpp  TestBuzzRenderer.cpp
tests/integration/: CMakeLists.txt  TestIntegration.cpp
tool/: .gitignore  icon.svg.import  project.godot
(+86 files in other folders)
